# starchar

./: .gitignore  CNAME  LICENSE  README.md  biome.json  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yaml  deploy.yml
chf-rs/: Cargo.toml
chf-rs/cli/: Cargo.toml
chf-rs/cli/src/: main.rs
chf-rs/lib/: Cargo.toml
chf-rs/lib/src/: chf.rs  cig_guid.rs  color.rs  dna.rs  hash.rs  item_port.rs  lib.rs  materials.rs
chf-rs/src/: lib.rs
chf-rs/wasm/: Cargo.toml
chf-rs/wasm/src/: lib.rs
public/: default_f.chf
scripts/: all-eyecolors.ts  all-head-ids.ts  extract.ts  getGuids.ts  hsv.html  setup-chf.ts  webp.sh
src/: App.tsx  BufferReader.ts  BufferWriter.ts  ChfViewer.tsx  buffer-reader.ts  chf.ts  crc32.ts  dnaStrings.ts  hexString.ts  main.tsx  paths.ts  testFile.ts  useCharacterStore.ts  useChfStore.ts  utils.ts
src/Chf/: Body.ts  BodyMaterial.ts  BodyType.ts  Character.ts  ChfFile.ts  Dna.ts  Dye.ts  DyeColors.ts  DyeValues.ts  EyeMaterial.ts  Eyebrows.ts  Eyelashes.ts  Eyes.ts  FaceColors.ts  FaceInfo.ts  FaceMaterial.ts  FacialHair.ts  Hair.ts  HairModifier.ts  Head.ts  HeadMaterial.ts  MakeupMaterial.ts
src/Components/: CharacterEditor.tsx  CharacterJsonDisplay.tsx  ChfViewer.tsx  DnaBlend.tsx  DnaImportExport.tsx  DnaPanel.tsx  DnaPart.tsx  DropzoneChf.tsx  FaceProperties.tsx  MakeupColorPicker.tsx  SkinColorPicker.tsx  SmallColorInput.tsx
src/Context/: CharacterContext.ts  CharacterContext.tsx  CharacterContextProvider.tsx  reducer.tsx
src/Hooks/: useCharacter.tsx  useCharacterContext.tsx
(+123 files in other folders)
